Fixes skills section alignment issures

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -55,19 +55,23 @@ font-family: "Open Sans" !important
     margin-right: 20px;
     font-weight: 600;
     font-size: 1.1rem !important;
-
 }
 
 .skillArray{
     padding-bottom: 50px !important;
 }
 .listContainer{
-    background: #0a192f;
+    // background: #0a192f;
     padding: 20px;
     border-radius: 20px;
-    color: white !important;
-    margin-bottom: 80px;
+    // color: white !important;
+    margin-bottom: 20px;
+    display: flex;
     // padding: 100px;
+    flex-direction: column;
+    // justify-content: space-between;
+    // align-items: space-between;
+    // justify-content: center;
 }
 
 // .indSkill{
@@ -76,4 +80,46 @@ font-family: "Open Sans" !important
 
 .intro span{
     color: orange;
+}
+
+.skill img{
+    height: 30px;
+    width: 30px;
+    margin-right: 20px;
+}
+
+.skillContainer{
+    display: flex;
+    // padding: 20px;
+    flex-wrap: wrap;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    // justify-content: center;
+    // align-items: center;
+    flex-direction: column;
+}
+.skill{
+    display: flex;
+    padding-right: 50px;
+    // align-items: center;
+    color: black;
+    font-weight: 600;
+    font-size: 1rem;
+    
+}
+
+.innerContainer{
+    padding-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.categoryName{
+    color: #798188;
+    
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    
+
 }
